[package]
name = "ewasm-precompile-ecadd"
version = "0.1.2"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ewasm-precompiles"
description = "Ethereum ECADD precompile in Rust"
publish = false
edition = "2018"

[dependencies]
ewasm_api = "0.5"
parity-bytes = { git = "https://github.com/paritytech/parity-common" }

[lib]
crate-type = ["cdylib"]
